autotests/syntax-tests-simple-refal/tests/negative/negative174.sref
Name { Name Name , Name Name : Name ( Name ) [ Name ] = ; ,
{ } { ( ( ) e.Var Name # Name 'chars' 123 ) Name , ( ) ( [ Name
] ) [ Name e.Var ] e.Var # Name 'chars' 123 < # Name > : , 'chars'
Name : { [ Name [ Name ] Name ] Name = 123 Name $SWAP ; = ;
} : { } : , : = : = ; = ; } Name : { } : , : = : = ; = ; } ;
